fixed horizontal scroll functionality

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,8 +234,7 @@ main {
 
 div.scrollmenu {
   background-color: #333;
-  overflow: auto;
-  white-space: nowrap;
+  overflow-x: scroll;
   display: flex
 }
 
@@ -249,6 +248,10 @@ div.scrollmenu a {
 
 div.scrollmenu a:hover {
   background-color: #777;
+}
+
+.vid-container{
+  flex: 0 0 auto;;
 }
 
 div.video-player {
